--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -247,6 +247,13 @@
   "cash_payment_accepted": "تم قبول الدفع النقدي بنجاح",
   "cash_pending": "الدفع النقدي معلق",
   "cash_pending_note": "يرجى الدفع نقداً عند وصولك",
+  "review": "مراجعة",
+  "reviewing": "جاري المراجعة...",
+  "reservation_pending": "الحجز معلق",
+  "reservation_pending_review": "هذا الحجز يحتاج إلى مراجعتك للتأكيد",
+  "reservation_pending_note": "يرجى مراجعة وتأكيد هذا الحجز",
+  "waiting_for_host_approval": "الضيف ينتظر منك قبول الحجز",
+  "waiting_for_host_to_approve": "في انتظار موافقة المضيف",
   "reject_reservation": "رفض الحجز",
   "rejecting_reservation": "جاري الرفض...",
   "reservation_rejected": "تم رفض الحجز بنجاح",
@@ -312,5 +319,99 @@
   "cash_payment": "الدفع النقدي",
   "important_note": "ملاحظة مهمة",
   "accept_cash_note": "بقبول هذا الحجز، تؤكد أن الضيف سيدفع نقداً عند الوصول",
-  "accept_reservation": "قبول الحجز"
+  "accept_reservation": "قبول الحجز",
+  "review": "مراجعة",
+  "reviewing": "جاري المراجعة...",
+  "reservation_pending": "الحجز معلق",
+  "reservation_pending_review": "هذا الحجز يحتاج إلى مراجعتك للتأكيد",
+  "reservation_pending_note": "يرجى مراجعة وتأكيد هذا الحجز",
+  "waiting_for_host_approval": "الضيف ينتظر منك قبول الحجز",
+  "waiting_for_host_to_approve": "في انتظار موافقة المضيف",
+  "invalid_booking_data": "بيانات الحجز غير صحيحة",
+  "please_check_booking": "يرجى التحقق من بيانات الحجز",
+  "user_data_missing": "بيانات المستخدم مفقودة",
+  "invalid_total_price": "السعر الإجمالي غير صحيح",
+  "cannot_book_past_dates": "لا يمكن الحجز للتواريخ الماضية",
+  "creating_payment": "جاري إنشاء الدفع...",
+  "payment_created_success": "تم إنشاء الدفع بنجاح",
+  "payment_creation_failed": "فشل في إنشاء الدفع",
+  "creating_cash_reservation": "جاري إنشاء الحجز النقدي...",
+  "cash_reservation_created": "تم إنشاء الحجز النقدي بنجاح",
+  "cash_reservation_failed": "فشل في إنشاء الحجز النقدي",
+  "payment_error": "خطأ في الدفع",
+  "cash_reservation_error": "خطأ في الحجز النقدي",
+  "invalid_payment_data": "بيانات الدفع غير صحيحة",
+  "invalid_cash_data": "بيانات الحجز النقدي غير صحيحة",
+  "server_error": "خطأ في الخادم",
+  "network_error": "خطأ في الشبكة",
+  "connection_timeout": "انتهت مهلة الاتصال",
+  "booking_data_incomplete": "بيانات الحجز غير مكتملة",
+  "booking_data_error": "خطأ في بيانات الحجز",
+  "errors": "الأخطاء",
+  "back_to_home": "العودة للصفحة الرئيسية",
+  "loading_booking_data": "جاري تحميل بيانات الحجز...",
+  "complete_booking": "إكمال الحجز",
+  "minor_data_issues": "مشاكل بسيطة في البيانات",
+  "premium_property": "عقار مميز",
+  "property_details": "تفاصيل العقار",
+  "wifi": "واي فاي",
+  "parking": "موقف سيارات",
+  "ac": "مكيف هواء",
+  "kitchen": "مطبخ",
+  "reservation_details": "تفاصيل الحجز",
+  "arrival_date": "تاريخ الوصول",
+  "departure_date": "تاريخ المغادرة",
+  "stay_duration": "مدة الإقامة",
+  "nights": "ليالي",
+  "payment_method": "طريقة الدفع",
+  "secure_online_payment": "دفع آمن عبر الإنترنت",
+  "pay_when_you_arrive": "ادفع عند وصولك",
+  "price_summary": "ملخص السعر",
+  "service_fees": "رسوم الخدمة",
+  "total_amount": "المبلغ الإجمالي",
+  "including_taxes": "شامل الضرائب",
+  "processing": "جاري المعالجة...",
+  "confirm_booking": "تأكيد الحجز",
+  "confirm_cash_booking": "تأكيد الحجز النقدي",
+  "agreement_text": "بالتأكيد، أنت توافق على",
+  "terms_and_conditions": "الشروط والأحكام",
+  "privacy_policy": "سياسة الخصوصية",
+  "secure_payment_note": "جميع المدفوعات آمنة ومشفرة",
+  "payment_verification_failed": "فشل في التحقق من الدفع",
+  "reservation_completed_successfully": "تم إكمال الحجز بنجاح 🎉",
+  "reservation_failed": "فشل في إكمال الحجز",
+  "reservation_creation_error": "خطأ في إنشاء الحجز",
+  "payment_session_not_found": "لم يتم العثور على جلسة الدفع",
+  "confirming_booking": "تأكيد حجزك...",
+  "payment_success": "تم الدفع بنجاح! 🎉",
+  "payment_success_note": "شكراً لك، تم إكمال حجزك ودفعك بنجاح",
+  "payment_warning": "تم الدفع بنجاح! لكن كان هناك مشكلة في تأكيد الحجز",
+  "payment_error_note": "شكراً لك، تم إكمال دفعتك، سنتواصل معك لتأكيد الحجز",
+  "payment_details": "تفاصيل الدفع",
+  "session_id": "معرف الجلسة",
+  "status": "الحالة",
+  "confirmed": "مؤكد",
+  "not_confirmed": "غير مؤكد",
+  "date": "التاريخ",
+  "visa_mastercard": "ادفع ببطاقة ماستركارد أو فيزا",
+  "invoice_sent_to_email": "تم إرسال الفاتورة إلى بريدك الإلكتروني",
+  "customer_information": "معلومات العميل",
+  "reservation_id": "معرف الحجز",
+  "property": "العقار",
+  "total_price": "السعر الإجمالي",
+  "booking_dates": "تواريخ الحجز",
+  "check_in": "تسجيل الوصول",
+  "check_out": "تسجيل المغادرة",
+  "payment_information": "معلومات الدفع",
+  "transaction_id": "معرف المعاملة",
+  "amount": "المبلغ",
+  "payment_status": "حالة الدفع",
+  "download_pdf": "تحميل PDF",
+  "downloading": "جاري التحميل...",
+  "pdf_downloaded_successfully": "تم تحميل PDF بنجاح",
+  "pdf_generation_failed": "فشل في إنشاء PDF",
+  "loading_reservation_details": "جاري تحميل تفاصيل الحجز...",
+  "please_wait": "يرجى الانتظار بينما نقوم بجلب تفاصيل حجزك",
+  "cash_payment_success_note": "تم تأكيد حجزك النقدي بنجاح",
+  "cash_on_arrival": "الدفع عند الوصول"
 }
