--- a/Web_code/locales/locales/en/common.json
+++ b/Web_code/locales/locales/en/common.json
@@ -292,7 +292,6 @@
   "invoice_sent_to_email": "An invoice has been sent to your email",
   "customer_information": "Customer Information",
   "reservation_id": "Reservation ID",
-  "property": "Property",
   "total_price": "Total Price",
   "booking_dates": "Booking Dates",
   "check_in": "Check-in",
@@ -328,7 +327,6 @@
   "characters": "characters",
   "note": "Note",
   "rejection_note": "This action will permanently delete the reservation and send a notification email to the guest.",
-  "cancel": "Cancel",
   "categories": {
     "Apartments": {
       "label": "Apartments",
@@ -369,6 +367,26 @@
     "Offices": {
       "label": "Offices",
       "description": "Administrative offices for rent"
+    },
+    "Hotel Apartments": {
+      "label": "Hotel Apartments",
+      "description": "Luxury hotel-style apartments with full services"
+    },
+    "Beach Houses": {
+      "label": "Beach Houses",
+      "description": "Houses located directly on the beach"
+    },
+    "Studios": {
+      "label": "Studios",
+      "description": "Compact single-room apartments"
+    },
+    "Family Houses": {
+      "label": "Family Houses",
+      "description": "Large houses suitable for families"
+    },
+    "Student Apartments": {
+      "label": "Student Apartments",
+      "description": "Affordable apartments for students"
     }
   },
   "payment_confirmed": "Payment Confirmed",
@@ -524,5 +542,121 @@
     "minimum_one_night": "Minimum 1 night stay required",
     "owner_warning_title": "⚠️ You cannot reserve your own listing",
     "owner_warning_message": "If you are the owner of this property, you don't need to make a reservation"
-  }
+  },
+  "listing_info": {
+    "hosted_by": "Hosted by",
+    "guests": "guests",
+    "rooms": "rooms",
+    "bathrooms": "bathrooms",
+    "description": "Description"
+  },
+  "listing_reservation": {
+    "nights_in": "nights in",
+    "night_in": "night in",
+    "check_in": "CHECK IN",
+    "check_out": "CHECKOUT",
+    "add_date": "Add date",
+    "price_per_night": "× nights",
+    "total": "Total",
+    "select_at_least_one_night": "Please select at least 1 night stay",
+    "reserve": "Reserve",
+    "wont_be_charged": "You won't be charged yet",
+    "report_listing": "Report this listing"
+  },
+  "listing_offer": {
+    "what_this_place_offers": "What this place offers"
+  },
+  "listing_map": {
+    "where_youll_be": "Where you'll be",
+    "listing_located_at": "This listing is located at",
+    "find_on_map": "You can find it on the map below."
+  },
+  "offers": {
+    "wifi": "Wi-Fi",
+    "wifi_description": "Free wireless internet",
+    "parking": "Parking",
+    "parking_description": "Free parking space",
+    "tv": "TV",
+    "tv_description": "Flat screen television",
+    "air_conditioning": "Air conditioning",
+    "air_conditioning_description": "Cooling system available",
+    "kitchen": "Kitchen",
+    "kitchen_description": "Equipped kitchen",
+    "swimming_pool": "Swimming Pool",
+    "swimming_pool_description": "Outdoor or indoor pool"
+  },
+  "rent_modal": {
+    "category_title": "Which of these best describes your place?",
+    "category_subtitle": "Pick a category",
+    "offers_title": "What amenities does your place offer?",
+    "offers_subtitle": "Select all that apply",
+    "location_title": "Where is your place located?",
+    "location_subtitle": "Help guests find you!",
+    "info_title": "Share some basics about your place",
+    "info_subtitle": "Tell guests about your property's capacity?",
+    "guests_title": "Guests",
+    "guests_subtitle": "How many guests do you allow?",
+    "rooms_title": "Rooms",
+    "rooms_subtitle": "How many Rooms do you have?",
+    "bathrooms_title": "Bathrooms",
+    "bathrooms_subtitle": "How many Bathrooms do you have?",
+    "images_title": "Add photos of your place",
+    "images_subtitle": "Show guests what your place looks like",
+    "description_title": "How would you describe your place?",
+    "description_subtitle": "Short and sweet works best!",
+    "price_title": "Now, set your price",
+    "price_subtitle": "How much do you charge per night?",
+    "selected": "Selected:",
+    "selected_location": "Selected location:",
+    "category_required": "Category is required",
+    "offers_required": "At least one offer is required",
+    "location_required": "Location is required"
+  },
+  "reviews": {
+    "title": "Reviews",
+    "no_reviews": "No reviews yet",
+    "be_first": "Be the first to review this place",
+    "average_rating": "Average rating",
+    "total_reviews": "total reviews",
+    "write_review": "Add Review",
+    "edit_review": "Edit your review",
+    "rating": "Rating",
+    "comment": "Comment",
+    "submit_review": "Submit Review",
+    "update_review": "Update Review",
+    "delete_review": "Delete Review",
+    "review_submitted": "Review submitted successfully",
+    "review_updated": "Review updated successfully",
+    "review_deleted": "Review deleted successfully",
+    "submit_error": "Failed to submit review",
+    "load_error": "Failed to load reviews",
+    "delete_error": "Failed to delete review",
+    "rating_required": "Rating is required",
+    "comment_placeholder": "Share your experience with this place...",
+    "comment_min_length": "Comment must be at least 10 characters",
+    "stars": "stars",
+    "star": "star",
+    "excellent": "Excellent",
+    "very_good": "Very Good",
+    "good": "Good",
+    "fair": "Fair",
+    "poor": "Poor"
+  },
+  "review_categories": {
+    "cleanliness": "Cleanliness",
+    "accuracy": "Accuracy",
+    "check_in": "Check-in",
+    "communication": "Communication",
+    "location": "Location",
+    "value": "Value",
+    "overall": "Overall rating"
+  },
+  "guest_favourite": {
+    "title": "Guest favourite",
+    "description": "This home is a guest favourite based on ratings, reviews, and reliability"
+  },
+  "delete_confirmation": "Are you sure you want to delete this review?",
+  "your_review": "Your Review",
+  "login_to_review": "Please log in to write a review",
+  "change_language": "Change Language"
 }
