--- a/Web_code/locales/locales/en/common.json
+++ b/Web_code/locales/locales/en/common.json
@@ -434,16 +434,25 @@
     "discover_new_places": "Discover New Places"
   },
   "footer": {
-    "company_info": "Company Info",
-    "quick_links": "Quick Links",
+    "companyDescription": "A leading platform in the field of tourist property booking in Libya. We provide the best accommodation experience for our valued customers.",
+    "quickLinks": "Quick Links",
+    "allProperties": "All Properties",
+    "favorites": "Favorites",
+    "myTrips": "My Trips",
+    "reservations": "Reservations",
     "support": "Support",
+    "helpCenter": "Help Center",
+    "privacyPolicy": "Privacy Policy",
+    "termsOfService": "Terms of Service",
+    "reportIssue": "Report an Issue",
+    "contactUs": "Contact Us",
+    "address": "Tripoli, Libya",
+    "copyright": "© 2024 Cozy Libya. All rights reserved.",
+    "company_info": "Company Info",
     "contact": "Contact Us",
     "about_cozy": "About Cozy",
     "how_it_works": "How It Works",
-    "help_center": "Help Center",
     "contact_support": "Contact Support",
-    "privacy_policy": "Privacy Policy",
-    "terms_of_service": "Terms of Service",
     "cancellation_policy": "Cancellation Policy",
     "all_rights_reserved": "All Rights Reserved"
   },
@@ -658,5 +667,8 @@
   "delete_confirmation": "Are you sure you want to delete this review?",
   "your_review": "Your Review",
   "login_to_review": "Please log in to write a review",
-  "change_language": "Change Language"
+  "change_language": "Change Language",
+  "Added_to_Favorites": "Added to Favorites",
+  "Add_to_Favorites": "Add to Favorites",
+  "Removed_from_favorites": "Removed from favorites"
 }
