--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -642,7 +642,45 @@
     "selected_location": "الموقع المختار:",
     "category_required": "الفئة مطلوبة",
     "offers_required": "مطلوب عرض واحد على الأقل",
-    "location_required": "الموقع مطلوب"
+    "location_required": "الموقع مطلوب",
+    "steps": {
+      "category": "الفئة",
+      "offers": "المرافق",
+      "location": "الموقع",
+      "info": "المعلومات",
+      "images": "الصور",
+      "description": "الوصف",
+      "price": "السعر"
+    },
+    "progress": "التقدم",
+    "create_listing_title": "إنشاء إعلانك",
+    "create_listing_subtitle": "دعنا نجعل عقارك جاهزاً للضيوف",
+    "continue": "متابعة",
+    "back": "رجوع",
+    "creating_listing": "جاري إنشاء الإعلان...",
+    "loading": "جاري التحميل...",
+    "create_listing_button": "🎉 إنشاء الإعلان",
+    "image_required": "الصورة مطلوبة",
+    "listing_created": "تم إنشاء الإعلان",
+    "something_went_wrong": "حدث خطأ ما",
+    "property_capacity": "سعة العقار:",
+    "guests": "ضيوف",
+    "rooms": "غرف",
+    "bathrooms": "حمامات",
+    "high_quality_photos": "الصور عالية الجودة تساعد في جذب المزيد من الضيوف",
+    "uploaded": "تم الرفع:",
+    "photo": "صورة",
+    "photos": "صور",
+    "title_label": "العنوان",
+    "description_label": "الوصف",
+    "price_label": "السعر",
+    "title_placeholder": "اجعله قصيراً وجذاباً (مثل: فيلا مريحة على الشاطئ)",
+    "description_placeholder": "صف ما يجعل مكانك فريداً وخاصاً",
+    "tip": "💡 نصيحة:",
+    "tip_description": "كن محدداً بشأن المرافق ونقاط القوة في الموقع وما يمكن للضيوف توقعه",
+    "tip_pricing": "💡 نصيحة: ابحث عن عقارات مماثلة في منطقتك لتحديد سعر تنافسي",
+    "create_listing_header": "إنشاء إعلانك",
+    "create_listing_subheader": "دعنا نجعل عقارك جاهزاً للضيوف"
   },
   "reviews": {
     "title": "التقييمات",
