--- a/Web_code/locales/locales/en/common.json
+++ b/Web_code/locales/locales/en/common.json
@@ -619,7 +619,45 @@
     "selected_location": "Selected location:",
     "category_required": "Category is required",
     "offers_required": "At least one offer is required",
-    "location_required": "Location is required"
+    "location_required": "Location is required",
+    "steps": {
+      "category": "Category",
+      "offers": "Offers",
+      "location": "Location",
+      "info": "Info",
+      "images": "Images",
+      "description": "Description",
+      "price": "Price"
+    },
+    "progress": "Progress",
+    "create_listing_title": "Create Your Listing",
+    "create_listing_subtitle": "Let's get your property ready for guests",
+    "continue": "Continue",
+    "back": "Back",
+    "creating_listing": "Creating Listing...",
+    "loading": "Loading...",
+    "create_listing_button": "🎉 Create Listing",
+    "image_required": "Image is required",
+    "listing_created": "Listing Created",
+    "something_went_wrong": "Something went wrong.",
+    "property_capacity": "Property capacity:",
+    "guests": "guests",
+    "rooms": "rooms",
+    "bathrooms": "bathrooms",
+    "high_quality_photos": "High-quality photos help attract more guests",
+    "uploaded": "Uploaded:",
+    "photo": "photo",
+    "photos": "photos",
+    "title_label": "Title",
+    "description_label": "Description",
+    "price_label": "Price",
+    "title_placeholder": "Keep it short and catchy (e.g., \"Cozy Beachfront Villa\")",
+    "description_placeholder": "Describe what makes your place unique and special",
+    "tip": "💡 Tip:",
+    "tip_description": "Be specific about amenities, location highlights, and what guests can expect",
+    "tip_pricing": "💡 Tip: Research similar properties in your area to set a competitive price",
+    "create_listing_header": "Create Your Listing",
+    "create_listing_subheader": "Let's get your property ready for guests"
   },
   "reviews": {
     "title": "Reviews",
