--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -736,5 +736,35 @@
   "choose_city": "اختر مدينة...",
   "city": "المدينة",
   "cities": "المدن",
-  "libyan_cities": "مدن ليبيا"
+  "libyan_cities": "مدن ليبيا",
+  "LYD": "د.ل",
+  "contact": {
+    "title": "تواصل معنا",
+    "subtitle": "نود أن نسمع منك. أرسل لنا رسالة وسنرد عليك في أقرب وقت ممكن.",
+    "get_in_touch": "تواصل معنا",
+    "description": "هل لديك سؤال أو تحتاج مساعدة؟ نحن هنا لمساعدتك! لا تتردد في التواصل معنا من خلال أي من القنوات التالية.",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "address": "العنوان",
+    "address_details": "طرابلس، ليبيا",
+    "business_hours": "ساعات العمل",
+    "weekdays": "الأحد - الخميس",
+    "weekend": "الجمعة - السبت",
+    "send_message": "أرسل لنا رسالة",
+    "name_label": "الاسم الكامل",
+    "name_placeholder": "أدخل اسمك الكامل",
+    "name_required": "الاسم مطلوب",
+    "email_label": "البريد الإلكتروني",
+    "email_placeholder": "أدخل بريدك الإلكتروني",
+    "email_required": "البريد الإلكتروني مطلوب",
+    "email_invalid": "يرجى إدخال بريد إلكتروني صحيح",
+    "message_label": "الرسالة",
+    "message_placeholder": "أخبرنا كيف يمكننا مساعدتك...",
+    "message_required": "الرسالة مطلوبة",
+    "message_min_length": "يجب أن تكون الرسالة 10 أحرف على الأقل",
+    "send_button": "إرسال الرسالة",
+    "sending": "جاري الإرسال...",
+    "success_message": "تم إرسال الرسالة بنجاح! سنرد عليك قريباً.",
+    "error_message": "فشل في إرسال الرسالة. يرجى المحاولة مرة أخرى."
+  }
 }
