--- a/Web_code/locales/locales/en/common.json
+++ b/Web_code/locales/locales/en/common.json
@@ -713,5 +713,35 @@
   "choose_city": "Choose a city...",
   "city": "City",
   "cities": "Cities",
-  "libyan_cities": "Libyan Cities"
+  "libyan_cities": "Libyan Cities",
+  "LYD": "LYD",
+  "contact": {
+    "title": "Contact Us",
+    "subtitle": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "get_in_touch": "Get in Touch",
+    "description": "Have a question or need assistance? We're here to help! Feel free to reach out to us through any of the following channels.",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "address_details": "Tripoli, Libya",
+    "business_hours": "Business Hours",
+    "weekdays": "Monday - Friday",
+    "weekend": "Saturday - Sunday",
+    "send_message": "Send us a Message",
+    "name_label": "Full Name",
+    "name_placeholder": "Enter your full name",
+    "name_required": "Name is required",
+    "email_label": "Email Address",
+    "email_placeholder": "Enter your email address",
+    "email_required": "Email is required",
+    "email_invalid": "Please enter a valid email address",
+    "message_label": "Message",
+    "message_placeholder": "Tell us how we can help you...",
+    "message_required": "Message is required",
+    "message_min_length": "Message must be at least 10 characters",
+    "send_button": "Send Message",
+    "sending": "Sending...",
+    "success_message": "Message sent successfully! We'll get back to you soon.",
+    "error_message": "Failed to send message. Please try again."
+  }
 }
