--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -766,5 +766,6 @@
     "sending": "جاري الإرسال...",
     "success_message": "تم إرسال الرسالة بنجاح! سنرد عليك قريباً.",
     "error_message": "فشل في إرسال الرسالة. يرجى المحاولة مرة أخرى."
-  }
+  },
+  "invoice_details": "تفاصيل الفاتورة"
 }
