--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -63,6 +63,43 @@
   "days": "أيام",
   "sign_up": "إنشاء حساب",
   "my_dashboard": "لوحة التحكم",
+  "host_dashboard": "لوحة المضيف",
+  "manage_properties": "إدارة العقارات",
+  "manage_reservations": "إدارة الحجوزات",
+  "add_new_property": "إضافة عقار جديد",
+  "remove_all_filters": "إزالة جميع الفلاتر",
+  "agree": "موافقة",
+  "new_password": "كلمة المرور الجديدة",
+  "confirm_password": "تأكيد كلمة المرور",
+  "update_password": "تحديث كلمة المرور",
+  "previous": "السابق",
+  "next": "التالي",
+  "host_request_title": "طلب أن تصبح مضيفاً",
+  "full_name": "الاسم الكامل",
+  "email": "البريد الإلكتروني",
+  "phone": "رقم الهاتف",
+  "company_name": "اسم الشركة",
+  "company_website": "موقع الشركة",
+  "id_card_number": "رقم بطاقة الهوية",
+  "national_id": "رقم وطني",
+  "personal_id": "بطاقة شخصية",
+  "send_request": "إرسال الطلب",
+  "cancel": "إلغاء",
+  "view_details": "عرض التفاصيل",
+  "approve": "موافقة",
+  "reject": "رفض",
+  "you": "أنت",
+  "detailed_ratings": "التقييمات المفصلة",
+  "cleanliness": "النظافة",
+  "accuracy": "الدقة",
+  "check_in": "تسجيل الدخول",
+  "communication": "التواصل",
+  "location": "الموقع",
+  "value": "القيمة",
+  "refresh_data": "تحديث البيانات",
+  "loading": "تحميل...",
+  "delete": "حذف",
+  "edit": "تحرير",
   "back_to_cozy": "العودة إلى كوزي",
   "booked_by": "محجوز بواسطة:",
   "price_min_error": "يجب أن يكون السعر 1 على الأقل",
@@ -427,7 +464,7 @@
     "subtitle": "للإقامة في ليبيا",
     "description": "ابحث عن أماكن إقامة فريدة، شقق، فيلات، ومنازل في جميع أنحاء ليبيا",
     "search_button": "ابدأ البحث",
-    "rent_button": "اعرض عقارك"
+    "rent_button": "أصبح مضيفاً"
   },
   "filter_results": {
     "title": "نتائج البحث",
@@ -767,5 +804,22 @@
     "success_message": "تم إرسال الرسالة بنجاح! سنرد عليك قريباً.",
     "error_message": "فشل في إرسال الرسالة. يرجى المحاولة مرة أخرى."
   },
-  "invoice_details": "تفاصيل الفاتورة"
+  "invoice_details": "تفاصيل الفاتورة",
+  "host_request_description": "املأ النموذج أدناه وسنراجع طلبك قريباً",
+  "request_type": "نوع الطلب",
+  "personal": "شخصي",
+  "business_or_office": "شركة أو مكتب",
+  "company_information": "معلومات الشركة",
+  "identity_information": "معلومات الهوية",
+  "id_card_type": "نوع بطاقة الهوية",
+  "enter_national_id": "أدخل الرقم الوطني",
+  "enter_personal_id": "أدخل رقم البطاقة الشخصية",
+  "note": "ملاحظة",
+  "company_note": "تأكد من صحة معلومات الشركة وموقعها الإلكتروني.",
+  "identity_note": "تأكد من صحة رقم الهوية المدخل.",
+  "fill_required_fields": "يرجى ملء جميع الحقول المطلوبة",
+  "fill_company_fields": "يرجى ملء جميع حقول الشركة",
+  "fill_identity_fields": "يرجى ملء جميع حقول الهوية",
+  "request_sent_successfully": "تم إرسال طلبك بنجاح! سنراجع طلبك قريباً",
+  "error_sending_request": "حدث خطأ أثناء إرسال الطلب"
 }
