--- a/Web_code/locales/locales/en/common.json
+++ b/Web_code/locales/locales/en/common.json
@@ -64,6 +64,43 @@
   "days": "Days",
   "sign_up": "Sign Up",
   "my_dashboard": "My Dashboard",
+  "host_dashboard": "Host Dashboard",
+  "manage_properties": "Manage Properties",
+  "manage_reservations": "Manage Reservations",
+  "add_new_property": "Add New Property",
+  "remove_all_filters": "Remove All Filters",
+  "agree": "Agree",
+  "new_password": "New Password",
+  "confirm_password": "Confirm Password",
+  "update_password": "Update Password",
+  "previous": "Previous",
+  "next": "Next",
+  "host_request_title": "Request to Become a Host",
+  "full_name": "Full Name",
+  "email": "Email",
+  "phone": "Phone Number",
+  "company_name": "Company Name",
+  "company_website": "Company Website",
+  "id_card_number": "ID Card Number",
+  "national_id": "National ID",
+  "personal_id": "Personal ID",
+  "send_request": "Send Request",
+  "cancel": "Cancel",
+  "view_details": "View Details",
+  "approve": "Approve",
+  "reject": "Reject",
+  "you": "You",
+  "detailed_ratings": "Detailed Ratings",
+  "cleanliness": "Cleanliness",
+  "accuracy": "Accuracy",
+  "check_in": "Check-in",
+  "communication": "Communication",
+  "location": "Location",
+  "value": "Value",
+  "refresh_data": "Refresh Data",
+  "loading": "Loading...",
+  "delete": "Delete",
+  "edit": "Edit",
   "back_to_cozy": "Back To Cozy",
   "booked_by": "Booked by:",
   "price_min_error": "Price must be at least 1",
@@ -404,7 +441,7 @@
     "subtitle": "to Stay in Libya",
     "description": "Find unique accommodations, apartments, villas, and homes throughout Libya",
     "search_button": "Start Searching",
-    "rent_button": "List Your Property"
+    "rent_button": "Become a Host"
   },
   "filter_results": {
     "title": "Search Results",
@@ -744,5 +781,22 @@
     "success_message": "Message sent successfully! We'll get back to you soon.",
     "error_message": "Failed to send message. Please try again."
   },
-  "invoice_details": " Invoice Details"
+  "invoice_details": " Invoice Details",
+  "host_request_description": "Fill out the form below and we'll review your request soon",
+  "request_type": "Request Type",
+  "personal": "Personal",
+  "business_or_office": "Company or Office",
+  "company_information": "Company Information",
+  "identity_information": "Identity Information",
+  "id_card_type": "ID Card Type",
+  "enter_national_id": "Enter National ID",
+  "enter_personal_id": "Enter Personal ID",
+  "note": "Note",
+  "company_note": "Make sure the company information and website are correct.",
+  "identity_note": "Make sure the ID number is correct.",
+  "fill_required_fields": "Please fill in all required fields",
+  "fill_company_fields": "Please fill in all company fields",
+  "fill_identity_fields": "Please fill in all identity fields",
+  "request_sent_successfully": "Your request has been sent successfully! We'll review your request soon",
+  "error_sending_request": "An error occurred while sending the request"
 }
